--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -37,7 +37,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "/portal/swagger.json";
+        url = "/integration/swagger.json";
       }
 
       hljs.configure({
